fix the reset function so the bullets all reset properly

--- a/demo.html
+++ b/demo.html
@@ -15,6 +15,11 @@
   <link rel="import" href="th-table-bullets.html">
 
 </head>
+<style type="text/css">
+  body {
+    background-color: #ddd;
+  }
+</style>
 <body unresolved>
 
   <p>An example of using <code>&lt;th-table-bullets></code>:</p>
