--- a/th-table-bullets.html
+++ b/th-table-bullets.html
@@ -98,7 +98,7 @@
         },
         animate: function(){
           var self = this,
-              rows = self.$.container.children
+              rows = self.$.container.children,
               i=0;
           
           self.bulletsReset = false;
