set overflow:hidden property so bullets don't display to the right of the component before sliding in

--- a/th-table-bullets.html
+++ b/th-table-bullets.html
@@ -9,6 +9,7 @@
           display: block;
           position: relative;
           width: 250px;
+          overflow: hidden;
         }
 
         #container {
